# pythonArquivos

./: arquivos.py  cervantes.txt  machado.txt  pyproject.toml
