[tool.poetry]
name = "pythonarquivos"
version = "0.1.0"
description = ""
authors = ["Arthur Oliveira <ruhtra.oliveira3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
